deploy/cluster/general/k8s-ngnix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: wr-type.dev
      http:
        paths:
          - pathType: Prefix
            path: /*
            backend:
              service:
                name: web-client
                port:
                  number: 80
          - pathType: Prefix
            path: /api(/|$)(.*)
            backend:
              service:
                name: backend
                port:
                  number: 80
